--- a/css/specificity.css
+++ b/css/specificity.css
@@ -31,13 +31,20 @@ code {
 	padding: 0 5px;
 }
 
+div.title {
+  padding-left:20px;
+}
 
+div.title h3 {
+  margin:10px 0px;
+}
 
-
-/* Items */
+div.description p {
+  padding:0px 20px;
+  margin-top:0px;
+}
 
 #items {
-	min-height: 536px;
 	position: relative;
 }
 
@@ -79,6 +86,11 @@ code {
 		_font-family: 'courier new', monospace;
 	}
 
+  .textarea-wrap {
+    position:relative;
+    width:100%;
+  }
+
 	.input {
     width:100%;
 		height: 36px;
@@ -100,6 +112,7 @@ code {
 		}
 
 	.selector {
+    width:100%;
 		min-height: 36px;
 		padding: 3px 5px;
 		background: #002B36;
@@ -134,16 +147,49 @@ code {
 		color: #FFF;
 	}
 
-		.legend span {
+@media (max-width: 431px) {
+  .legend > div > span {
+    height:88px;
+  }
+}
+
+@media (min-width: 432px) and (max-width: 500px) {
+   .legend > div > span {
+    height:76px;
+  } 
+}
+
+@media (min-width: 501px) and (max-width: 592px) {
+   .legend > div > span {
+     height:60px;
+  } 
+}
+
+@media (min-width: 593px) {
+   .legend > div > span {
+    height:50px;
+  } 
+}
+
+
+		.legend > div > span {
+      position:relative;
 			width: 100%;
       display: inline-block;
 			margin-left: 2px;
-      height:62px;
 			-webkit-border-bottom-left-radius: 3px;
 			border-bottom-left-radius: 3px;
 			-webkit-border-bottom-right-radius: 3px;
 			border-bottom-right-radius: 3px;
 		}
+
+      .legend > div > span > span {
+        display:block;
+        position:absolute;
+        bottom:6px;
+        width:100%;
+        text-align:center;
+      }
 
 			.legend  span:first-child {
 				margin-left: 0;
@@ -217,6 +263,7 @@ code {
 	left: 20px;
 }
 
+/*
 .offscreen-container {
 	height: 1px;
 	width: 1px;
@@ -229,3 +276,4 @@ code {
 	left: 10000px;
 	top: 10000px;
 }
+*/
